--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -151,9 +151,7 @@
 		{
 			foreach (var precio in juego.PrecioActualesTiendas)
 			{
-				TimeSpan actualizado = DateTime.Now.Subtract(precio.FechaActualizacion);
-
-				if (actualizado.TotalHours < 12)
+				if (Herramientas.OfertaActiva.Verificar(precio) == true)
 				{
 					decimal tempPrecio = precio.Precio;
 
