--- a/pepeizqs deals web/Pages/last-news.cshtml
+++ b/pepeizqs deals web/Pages/last-news.cshtml
@@ -2,10 +2,47 @@
 @model pepeizqs_deals_web.Pages.LastNewsModel
 
 @{
+	#nullable disable
+
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "LastNews");
 	Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.Server, new { 
-	idioma = Model.idioma 
-}))
+	bool seo = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			seo = Herramientas.RobotsUserAgents.Autorizar(userAgent);
+		}
+	}
+
+	if (seo == true)
+	{
+		string enlace = "https://pepeizqdeals.com/last-news/";
+
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma,
+			titulo = Herramientas.Idiomas.BuscarTexto(Model.idioma, "Title", "LastNews"),
+			enlace = enlace,
+			canonical = enlace,
+			descripcion = Herramientas.Idiomas.BuscarTexto(Model.idioma, "String4", "HistoricalLows")
+		}))
+
+		@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma
+		}))
+	}
+	else
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.Server, new
+		{
+			idioma = Model.idioma
+		}))
+	}
+}
